PublicTemplates/kavemans.dev/src/styles/common.css
@charset "UTF-8";

header {
  background-color: rgba(255, 255, 255, 0);
  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
  position: fixed;
  top: 0;
  width: 100%;
  height: 60px;
  z-index: 2;
}

header .logo {
  font-size: 1.2em;
  position: absolute;
  top: 0;
  left: 15px;
  height: 60px;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  text-align: center;
  text-decoration: none;
}

header .logo::before {
  content: "Kavemans";
  color: #3bd671;
  font-weight: 400;
}

header .logo::after {
  content: ".dev";
  color: #fff;
  opacity: 0.67;
  transition: all 0ms, opacity 200ms;
}

header .logo:hover::after {
  opacity: 1;
}

header nav {
  position: absolute;
  font-size: 1em;
  top: 0;
  right: 15px;
  height: 60px;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  text-align: center;
  text-decoration: none;
}

header nav a {
  color: rgba(255, 255, 255, 0.8);
  margin: 0 15px;
  transition: all 0ms, color 200ms;
  text-decoration: none;
}

header nav a:hover {
  color: rgba(255, 255, 255, 1);
  text-decoration: none;
}

main, .container {
  padding-top: 20px;
  width: 100%;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center center;
  background-size: cover;
  background-position: center center;
}

.announcements {
  width: 100%;
  --position: absolute;
  top: 60px;
}

.announcements > div {
  border-radius: 5px;
  margin-bottom: 10px;
  padding: 10px 15.5px;
  padding-left: 27.5px;
  text-shadow: #000 0 0 5px;
}

.announcements > div::before {
  font-family: var(--font-awesome-version);
  font-weight: 600;
  content: "\f0a1";
  margin-top: 5px;
  transform: translateX(-10px);
  display: inline-block;
}


.announcements > .info {
  background-color: #6992a6;
}

.announcements > .warn {
  background-color: #d98f33;
}

.container h2,
.dynamicMargin {
  max-width: 1000px;
  width: calc(100% - 30px);
  box-sizing: border-box;
  text-align: left;
}

.container > h2 {
  font-size: 1.67rem;
  margin-block-start: 0;
}

.container > h2 > span {
  display: block;
  color: rgba(255, 255, 255, 0.5);
  font-size: 0.55em;
  font-weight: normal;
}

.container, .feed {
  margin-bottom: 1.25em;
}

body:not(.stickyFooter) .contentWrapper {
  padding-bottom: 90px;
}

footer {
  padding-top: 0 !important;
  box-shadow: rgb(255 255 255 / 30%) 0 -3px 0;
  background-color: rgb(0 0 0 / 30%);
  bottom: 0;
  width: 100%;
  box-sizing: border-box;
}

footer > .content {
  height: 100%;
}

footer > .content::before {
  content: '';
  display: block;
  float: left;
  background-image: url('/src/sprites/KeyFireLogo.webp');
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center center;
  height: calc(100%);
  width: 52px;
}

footer h2 {
  font-size: 12pt !important;
  font-weight: normal;
}

body.largeFooter footer {
  padding: 5px 0 !important;
  color: #fff;
  height: 120px;
}

body.largeFooter footer > .content {
  --height: 100px;
  height: var(--height);
}

body.largeFooter > .content::before {
  width: 52px;
}

body.stickyFooter footer {
  position: fixed;
  bottom: 0;
}

footer.sticky > .content > div {
  height: var(--height);
  width: auto;
  margin: 0;
}

/*Footer: text container */
body.largeFooter > footer > div {
  text-align: left;
  align-items: flex-start;
  margin-left: 85px;
}


@media (max-width: 765px), (orientation: portrait) {
  header .logo::before {
    content: "";
    display: inline-block;
    font-weight: 400;
    width: 20px;
    height: 20px;
    margin-right: 5px;
  }

  header .logo::before {
    background-image: url('/favicon.ico');
    background-size: contain;
    background-position: center center;
  }
  
  header nav a:nth-child(1) {
    display: none;
  }

  footer h2 {
    text-align: center !important;
  }
}

